@@ -17,3 +17,4 @@ without autoconf support.
 * pam_stack: Fix memory leaks (tmraz)
 * pam_timestamp: Ignore the timestamp file if it's older than oldest 
   login (tmraz)
+* Allow using pam_console for authentication (tmraz)
